# RZip

./: .gitignore  .prettierrc  Cargo.toml  Readme.md  changelog.md  vcpkg.json
.github/:  changelog.md  codecov.yml
.github/workflows/: build_release.yml  ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: common.rs  main.rs
apps/gui/: index.html  package.json  pnpm-lock.yaml
apps/gui/src/: App.css  App.tsx  FileTree.tsx  RzipConfigProvider.tsx  UIRoot.tsx  UiRoot.tsx  main.tsx  styles.css
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/src/: main.rs  utils.rs
apps/gui/src/components/: FileTree.tsx  PathInput.tsx
apps/gui/src/layout/: RzipApp.tsx
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  unpack.rs
lib/tests/: mod.rs  test_individual.rs  test_nested.rs  test_series.rs  test_unpackers.rs
lib/tests/data/indiv/: Readme.md  packed_7z.7z  packed_rar.rar  packed_tar.tar  packed_tar_xz.tar.xz
lib/tests/data/nested/: Readme.md
lib/tests/data/series/: Readme.md
src/: common.rs  error.rs  main.rs  unpack.rs
test_archives/: test_archive-seven.7z  test_archives-tar.tar
