[package]
name = "rzip_lib"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.61"
compress-tools = "0.14.3"

[dev-dependencies]
tempfile = "3.10.1"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2024.06.15"
dependencies = ["libarchive"]

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { dependencies = ["libarchive"] }
x86_64-unknown-linux-gnu = { dependencies = ["libarchive"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = [
  "libarchive",
] }
