[package]
name = "rzip_lib"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.61"
compress-tools = "0.15.0"
sevenz-rust = "0.6.0"
flate2 = "1.0.30"
tar = "0.4.41"

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2024.06.15"
dependencies = ["libarchive"]

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { dependencies = ["libarchive"] }
x86_64-unknown-linux-gnu = { dependencies = ["libarchive"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = [
  "libarchive",
] }
